# otus-cpp-basics

./: README.md  main.py
02_HelloWorld/: CMakeLists.txt  hello_world.cpp
02_hw_hello-world/: CMakeLists.txt
04_hw_struct-classes/: Ball.cpp  Ball.hpp  World.cpp
05_Link_HW/: CMakeLists.txt  guess_my_num_utils.cpp  guess_my_num_utils.h  guess_my_number.cpp
05_hw_polymorphism/: CMakeLists.txt  Max.cpp  Max.hpp  Mean.cpp  Mean.hpp  Min.cpp  Min.hpp  Std.cpp  Std.hpp  statistics.cpp
06_hw_details_container/: CMakeLists.txt  LinkListContainer.hpp  SequentialContainer.hpp  main.cpp
07_hw_googletest/: CMakeLists.txt  LinkListContainer_keywords.cpp  LinkListContainer_test.cpp  SequentialContainer_keywords.cpp  SequentialContainer_test.cpp
08_hw_topk-words_threads/: CMakeLists.txt  little_file  summarized_counter.hpp  topk_words.cpp
10_Structure_Classes_HW-engineer-calc/include/: astnode_child.hpp
10_Structure_Classes_HW-engineer-calc/src/: main.cpp  parser.cpp
12_Polimorphism_HW/: CMakeLists.txt  statistics.cpp
